# hackathon-23-cocky-chickens-bag-end

./: .dockerignore  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  database.env  docker-compose-local.yml  docker-compose.yml  main.py  pyproject.toml
app/: database.py  main.py  name_generator.py
app/labels/: animals.txt  household.txt  people.txt  plants.txt
iac/: .terraform.lock.hcl  main.tf
