[tool.poetry]
name = "spot-the-chicken"
version = "0.1.0"
description = ""
authors = ["Cocky Chickens"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
