[tool.poetry]
name = "spot-the-chicken"
version = "0.1.0"
description = ""
authors = ["Cocky Chickens"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
SQLAlchemy = "^1.3.0,<1.4"
SQLAlchemy-Utils = "^0.36.8"
FastAPI-SQLAlchemy = "^0.2.1"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
